[gd_scene load_steps=17 format=1]

[ext_resource path="res://Scripts/CarController.gd" type="Script" id=1]
[ext_resource path="res://Assets/City Tileset/Car01.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/GasCan01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/GasCanLoss.wav" type="Sample" id=4]
[ext_resource path="res://Assets/Audio/GasCanPickup.wav" type="Sample" id=5]
[ext_resource path="res://Assets/Audio/bu-place-of-toasters.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Images/Continue.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Continue_hover.png" type="Texture" id=8]
[ext_resource path="res://Scripts/GoToLevels.gd" type="Script" id=9]
[ext_resource path="res://Assets/Images/Complete.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Loss.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Restart.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Restart_hover.png" type="Texture" id=13]
[ext_resource path="res://Scripts/ReloadScene.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.3862
height = 9.09602

[sub_resource type="SampleLibrary" id=2]

samples/GasCanLoss = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/GasCanPickup = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="Car" type="RigidBody2D"]

transform/pos = Vector2( 495.951, 431.215 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Car01" type="Sprite" parent="."]

transform/pos = Vector2( -0.961559, -0.169689 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.65, 0.65 )
limit/left = 0
limit/top = 0
limit/right = 1376
limit/bottom = 864
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Panel" type="Panel" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 896.0
margin/top = -6.0
margin/right = 1032.0
margin/bottom = 48.0

[node name="GasCan1" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 50, 50 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="GasCan2" type="Sprite" parent="CanvasLayer"]

visibility/visible = false
transform/pos = Vector2( 125, 50 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="GasCan3" type="Sprite" parent="CanvasLayer"]

visibility/visible = false
transform/pos = Vector2( 200, 50 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="GasCan4" type="Sprite" parent="CanvasLayer"]

visibility/visible = false
transform/pos = Vector2( 275, 50 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 112.0
margin/top = 584.0
margin/right = 61.0
margin/bottom = 570.0
text = "Fuel: 30"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="BackgroundMusic" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="CompleteCanvasLayer" type="CanvasLayer" parent="."]

process/pause_mode = 2
editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Complete" type="Control" parent="CompleteCanvasLayer"]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 494.951
margin/top = 430.215
margin/right = 534.951
margin/bottom = 470.215

[node name="Continue" type="TextureButton" parent="CompleteCanvasLayer/Complete"]

process/pause_mode = 2
rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -94.0
margin/top = 66.0
margin/right = -50.0
margin/bottom = 77.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 9 )

[node name="TextureFrame" type="TextureFrame" parent="CompleteCanvasLayer/Complete"]

process/pause_mode = 2
rect/scale = Vector2( 7, 7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -142.0
margin/top = -382.0
margin/right = -97.0
margin/bottom = -369.0
texture = ExtResource( 10 )
stretch_mode = 0

[node name="LossCanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="LossCanvasLayer"]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Loss" type="TextureFrame" parent="LossCanvasLayer/Control"]

process/pause_mode = 2
rect/scale = Vector2( 10, 10 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 32.0
margin/right = 456.0
margin/bottom = 72.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="Continue" type="TextureButton" parent="LossCanvasLayer/Control"]

process/pause_mode = 2
rect/scale = Vector2( 6, 6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 496.0
margin/right = 428.0
margin/bottom = 507.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 9 )

[node name="Restart" type="TextureButton" parent="LossCanvasLayer/Control"]

process/pause_mode = 2
rect/scale = Vector2( 6, 6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 368.0
margin/top = 384.0
margin/right = 417.0
margin/bottom = 397.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 12 )
textures/hover = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 14 )

[connection signal="body_enter" from="." to="." method="_on_RigidBody2D_body_enter"]

[connection signal="pressed" from="CompleteCanvasLayer/Complete/Continue" to="CompleteCanvasLayer/Complete/Continue" method="_on_PlayButton_pressed"]

[connection signal="pressed" from="LossCanvasLayer/Control/Continue" to="LossCanvasLayer/Control/Continue" method="_on_PlayButton_pressed"]

[connection signal="pressed" from="LossCanvasLayer/Control/Restart" to="LossCanvasLayer/Control/Restart" method="_on_Restart_pressed"]


